added TODO item
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1291 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ TODO:
     - rect style (and errorbars?) should use clipping
     - paths are to be drawn instead of inserted
     - should the divisor argument be moved to the texters?
+    - zeropathattrs=None should be the default
   - style module:
     - default patterns
     - make dash length available
