--- a/CHANGES
+++ b/CHANGES
@@ -15,9 +15,11 @@ TODO:
     - allow for graph.changesymbol.square(size=0.15) etc.
     - rect style (and errorbars?) should use clipping
     - paths are to be drawn instead of inserted
-    - should the divisor argument be moved to the texters?
+    - is the divisor argument really necessary?
     - zeropathattrs=None should be the default
     - consider removing the zero line feature
+    - the exponentialtexter should have a labelattrs argument and the mantissatexter
+      should be removed
   - style module:
     - default patterns
     - make dash length available
@@ -42,6 +44,12 @@ TODO:
     - consider rewriting decoratedpath as canvas
   - style and color module:
     - support modification of existing styles via __call__
+
+0.5.1 (XXXX/XX/XX):
+
+  - prolog module:
+    - fix unpaired BeginProcSet/EndProcSet in font enconding
+
 
 0.5 (2004/01/20):
   - setup.py and distribution:
