--- a/CHANGES
+++ b/CHANGES
@@ -70,7 +70,7 @@ TODO:
     - explicitly quit (La)TeX in cleantmp (helps when quitting with <Ctrl>C)
     - showwaitfortex implemented following a suggestion by Fernando Perez
       (waitfortex is increased to 60 seconds now)
-    - support of TeX extention --ipc for reading dvi results while TeX keeps running
+    - support of TeX extension --ipc for reading dvi results while TeX keeps running
     - configurable font mapping files (via pyxrc or parameter of the texrunner constructor)
     - markers to get access to positions within TeX expressions
     - fix: allow for e-tex in texmessage.start (reported by Andrea Riciputi)
