--- a/CHANGES
+++ b/CHANGES
@@ -32,7 +32,7 @@ TODO:
   - mathtree module:
      - consider rewrite using the python compiler module
   - bbox module:
-     - __iadd__ and inplace enlarge, transform,...
+     - inplace enlarge, transform,...
   - path module:
     - reverse needs to be fixed
     - there should be a path._at, path._begin, path._end
@@ -47,6 +47,12 @@ TODO:
     - consider rewriting decoratedpath as canvas
   - style and color module:
     - support modification of existing styles via __call__
+
+0.6 (XXXX/XX/XX):
+  - bbox module:
+     - added inplace add method __iadd__
+     - callers use inplace add where possible now (yielding a considerable
+       speedup)
 
 
 0.5.1 (2004/01/22):
