--- a/CHANGES
+++ b/CHANGES
@@ -32,7 +32,7 @@ TODO:
   - mathtree module:
      - consider rewrite using the python compiler module
   - bbox module:
-     - inplace enlarge, transform,...
+     - we should not support None arguments for llx, lly, urx, and ury anymore
   - path module:
     - reverse needs to be fixed
     - there should be a path._at, path._begin, path._end
@@ -50,17 +50,15 @@ TODO:
 
 0.6 (XXXX/XX/XX):
   - bbox module:
-     - added inplace add method __iadd__
+     - added inplace add (__iadd__), enlarge and transform methods
      - callers use inplace add where possible now (yielding a considerable
        speedup)
-
 
 0.5.1 (2004/01/22):
   - distribution:
     - include missing c-files for optional extension modules
   - prolog module:
     - fix unpaired BeginProcSet/EndProcSet in font enconding
-
 
 0.5 (2004/01/20):
   - setup.py and distribution:
