--- a/CHANGES
+++ b/CHANGES
@@ -26,7 +26,9 @@ TODO:
     - make dash length available
   - text module:
     - SlantFont & Co support
-    - keep an eye on PEP 324 (popen 5): it could make the texrunner stuff much easier
+    - keep an eye on PEP 324 (popen 5): it could make the texrunner much easier
+  - unit and text module:
+    - introduce xscale for scaling the TeX output
   - mathtree module:
      - consider rewrite using the python compiler module
   - bbox module:
@@ -62,6 +64,8 @@ TODO:
     - zero line feature removed (TODO: documentation)
   - text module:
     - default handling of texmessages as in the new attribute scheme
+  - examples:
+    - mandel.py (contributed by Stephen Phillips)
 
 0.5.1 (2004/01/22):
   - distribution:
