"Undefined" corners of bounding boxes are no longer supported which makes the bounding box operations much more efficient. For test_graph.py this gave a speedup of 20%!
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1316 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -66,6 +66,9 @@ TODO:
     - default handling of texmessages as in the new attribute scheme
   - examples:
     - mandel.py (contributed by Stephen Phillips)
+  - bbox module:
+    - "undefined" corners of bounding boxes are no longer supported which makes
+      the bounding box operations much more efficient.
 
 0.5.1 (2004/01/22):
   - distribution:
