--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,8 @@ TODO:
   - path module:
     - reverse needs to be fixed
     - there should be a path._at, path._begin, path._end
+    - _lentopar return value should not contain total length (or at least
+      should return a tuple ([params], length) and not a list)
   - data module:
     - data.data should add line number like data.datafile
     - use csv module (new in 2.3)
