added new pathel multilineto_pt which allows to specify a list of points
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1325 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -71,6 +71,10 @@ TODO:
     - multiple insert bug fixed
   - examples:
     - mandel.py (contributed by Stephen Phillips)
+  - path:
+    - added new pathel multilineto_pt which allows to specify a list of points
+    and can thus be much more efficient
+
 
 0.5.1 (2004/01/22):
   - distribution:
