--- a/CHANGES
+++ b/CHANGES
@@ -33,7 +33,6 @@ TODO:
      - we should not support None arguments for llx, lly, urx, and ury anymore
   - path module:
     - reverse needs to be fixed
-    - there should be a path._at, path._begin, path._end
     - _lentopar return value should not contain total length (or at least
       should return a tuple ([params], length) and not a list)
   - data module:
@@ -74,6 +73,10 @@ TODO:
   - path:
     - added new pathel multilineto_pt which allows to specify a list of points
       and can thus be much more efficient
+    - internal methods return coordinates in pts
+    - lentopar return tuple not list
+    - added path.arclength_pt, path.at_pt, path.begin_pt, path.end_pt (and 
+      correspondingly for normpath) (TODO: documentation)
 
 
 0.5.1 (2004/01/22):
