--- a/CHANGES
+++ b/CHANGES
@@ -31,8 +31,7 @@ TODO:
      - consider rewrite using the python compiler module
   - path module:
     - reverse needs to be fixed
-    - _lentopar return value should not contain total length (or at least
-      should return a tuple ([params], length) and not a list)
+    - _lentopar return value should not contain total length
   - data module:
     - data.data should add line number like data.datafile
     - use csv module (new in 2.3)
