--- a/manual/text.tex
+++ b/manual/text.tex
@@ -124,17 +124,19 @@ respectively)
 \caption{valign example}
 \label{fig:textvalign}
 \end{figure}
+\item[Vertical alignment:] \verb|valign.top|, \verb|valign.middle|,
+\verb|valign.bottom|, \verb|valign.baseline| (default); see the left
+hand side of figure~\ref{fig:textvalign}
 \item[Vertical box:] Usually, \TeX/\LaTeX{} expressions are handled in
 horizontal mode (so-called LR-mode in \TeX/\LaTeX; everything goes
 into a single line). You may use \verb|parbox(x)|, where \verb|x| is the
 width of the text, to switch to a multiline mode (so-called vertical
 mode in \TeX/\LaTeX). The additional keyword parameter \verb|baseline|
-can be set to \verb|parbox.top| (default), \verb|parbox.middle|,
-\verb|parbox.bottom| to alter the position of the baseline; see
-figure~\ref{fig:textvalign} for an example
-\item[Vertical alignment:] \verb|valign.top|, \verb|valign.middle|,
-\verb|valign.bottom|, \verb|valign.baseline| (default); see
-figure~\ref{fig:textvalign} for an example
+allows the user to alter the position of the baseline. It can be set
+to \verb|parbox.top| (default), \verb|parbox.middle|,
+\verb|parbox.bottom| (see the right hand side of
+figure~\ref{fig:textvalign}). The baseline position is relevant when
+the vertical alignment is set to baseline only.
 \item[Vertical shift:] \verb|vshift(lowerratio, heightstr="0")|
 (lowers the output by \verb|lowerratio| of the height of
 \verb|heightstr|), \verb|vshift.bottomzero=vshift(0)| (doesn't have an
